0004 - menu bar size adjusted, wording fixed, dropdown alignment

--- a/index.css
+++ b/index.css
@@ -37,9 +37,21 @@ p {
     transition: 0.2s;
 }
 
+/*jobs dropdown button positions*/
 #jobs #jobs-alphabetical, #jobs #jobs-amounts {
-    margin-bottom: 20px;
+    padding: inherit;
+    margin: auto;
 } 
+
+/*alphabetical company list button location*/
+#jobs-alphabetical {
+    float: left;
+}
+
+/*amount of company contacts button location*/
+#jobs-amounts {
+    float: right;
+}
 
 /*job search dropdown buttons*/
 .btn-alpha, .btn-amt {
@@ -97,6 +109,13 @@ p {
     display: block;
 }
 
+/*job results div*/
+#jobs-results {
+    margin: auto;
+    padding: 100px;
+    
+}
+
 /*search result preview window*/
 #result-preview {
     
@@ -136,7 +155,7 @@ ul, .menu {
     position: fixed;
     padding: 0;
     margin: 0;
-    width: 25%;
+    width: 15%;
     background-color: #0b0f1a;
     height: 100%;
 }
@@ -164,5 +183,4 @@ li a:hover {
 .jobs, .about, .contact, .faq {
     border-right: solid #164f9c 2px;
     border-bottom: solid #164f9c 2px;
-
 }
